--- a/요구사항 1-3~.md
+++ b/요구사항 1-3~.md
@@ -206,8 +206,8 @@ public class IOUtils {
     Cookie: logined=true
     ```
 
-책의 힌트에서는 응답헤더의 예시가 200이었지만 로그인 성공이나 실패시 페이지 리다이렉트가 필수인 상황이었다. 200코드로 가눙 규횬울 하고 실행했는데 의도한대로 웹이 동작하지 않았다. 처음에는 200이나 200번대로 리다이렉트를 하는 방법이 있는지
-검색해보기 시작했다. 이전 get과 post 방식의 회원가입을 구현할 때 처럼 300번대 HTTP 코드를 사용해야할 것 같았고 아무리 검색해봐도 300번대의 코드로 리다이렉트를 하는 것이 정답이었다. 그래서 저자 깃허브랑 유튜브 영상을 찾아보는데 책에 힌트가 잘못 소개된 것이 맞았다.
+책의 요구사항에서는 응답헤더의 예시가 200이었는데 로그인 성공이나 실패시 페이지 리다이렉트를 수행하라고 하였다. 이동할 페이지에 해당하는 파일을 읽고 응답코드는 200을 담아 보냈는데 의도한대로 웹이 동작하지 않았다.(웹 페이지 내용은 이동한 페이지 였으나 URL이 user/login.html이었음) 처음에는 200이나 200번대로 리다이렉트를 하는 방법이 있는지 검색해보기 시작했다.
+하지만 그런건 없었고 이전 get과 post 방식의 회원가입을 구현할 때 300번대 HTTP 코드를 사용했기 떄문에 300번대의 코드로 리다이렉트를 해야할 것 같았고 찾아보니 내가 생각한 것이 정답이었다. 그래서 저자 깃허브랑 유튜브 영상을 찾아보는데 책에 힌트가 잘못 적혀있던 것이 맞았다.
 
 <br>
 
