--- a/리펙토링실습.md
+++ b/리펙토링실습.md
@@ -112,8 +112,53 @@ public class HttpRequestTest{
 }
 ```
 
-응답 데이터를 처리하는 로직을 별도의 클래스로 분리한다(HttpResponse)
+
+
+
+응답 데이터를 처리하는 로직을 별도의 클래스로 분리한다(HttpResponse) 아래 테스트 코드로 정상동작하는지 확인한다.
 - HttpResponseTest.Java
 ```
+import org.junit.Test;
 
+public class HttpResponseTest{
+    private String testDirectory = "./src/test/resources/";
+    @Test
+    public void responseForward() throws Exception{
+        HttpResponse response = new HttpResponse(createOutputStream("Http_Forward.txt"));
+        response.forward("/index.html")
+    }
+    @Test
+    public void responseRedirect() throws Exception {
+        HttpResponse response = new HttpResponse(CreateOutputStream("HttpRedirect.txt"));
+        response.sendRedirect("/index.html");
+    }
+    @Test
+    public void responseCookies() throws Exception{
+        HttpResponse response = new HttpResponse(createOutputStream("HTTP_Cookie.txt"));
+        response.addHeader("Set-Cookie","logined=true");
+        response.sendRedirect("/index.html");
+    }
+    private OutputStream createOutputStream(Stinrg filename) throws FileNotFoundException{
+        return new FileOutputStream(new File(testDirectory +filename));
+    }
+}
 ```
+
+HttpRequest, HttpResponse 클래스는 아래처럼 설계한다
+- HttpRequest
+  - 클라이언트 요청 데이터를 담고 있는 InputStream을 생성자로 받아 HTTP 메소드, URL, 헤더, 본문을 분리하는 작업을 한다
+  - 헤더는 MAP<String, String> 에 저장해 관리하고 getHeader("필드 이름") 메서드르 통해 접근 가능하도록 구현한다
+  - GET과 POST 메서드에 따라 전달되는 인자를 Map<String, String>에 저장해 관리하고 getParameter("인자 이름") 메서드를 통해 접근 가능 하도록 구현한다
+  
+- HttpResponse
+  - RequestHandler 클래스를 보면 응답 데이터 처리를 위한 많은 중복이 있다. 이 중복을 제거해본다
+  - 응답 헤더 정보를 Map<String, String>으로 관리한다
+  - 응답을 보낼 때 HTML, CSS, 자바스크립트 파일을 직접 읽어 응답으로 보내는 메서드는 forward(), 다른 URL로 리다이렉트 하는 메서드는 sendRedirect() 메서드를 나누어 구현한다.
+
+ <br>
+ 리펙토링 전 클래스 다이어그램
+ 
+ ![image](https://github.com/kdfasdf/javawebserver/assets/96770726/0483d1cb-dfc6-4146-9ee5-5c420d0635d8)
+
+
+ 
