--- a/리펙토링실습.md
+++ b/리펙토링실습.md
@@ -160,5 +160,31 @@ HttpRequest, HttpResponse 클래스는 아래처럼 설계한다
  
  ![image](https://github.com/kdfasdf/javawebserver/assets/96770726/0483d1cb-dfc6-4146-9ee5-5c420d0635d8)
 
+- <<create>> 표시의 의미는 RequestHandler가 HttpRequest와 HttpResponse를 직접 생성하면서 로컬 변수로 의존관계를 가지는 것을 의미한다
+
+<br>
+<br>
+
+다형성을 활용해 클라이언트 요청 URL에 대한 분기 처리를 제거한다
+웹 페이지 기능을 추가할 때 마다 요청 URL이 달라져 RequestHandler에 요청을 처리할 때 if-else문을 추가하는 식으로 구현했었다.
+기능이 많아질수록 분기문의 수는 증가한다. 다형성을 활용해 분기문을 제거한다.
+
+- 각 요청과 응답에 대한 처리를 담당하는 부분을 추상화해 인터페이스로 만든다 인터페이스는 다음과 같이 구현할 수 있다.
+  ```
+  public interface Controller{
+   void service (HttpRequest request, HttpResponse response);
+  }
+  ```
+- 각 분기문을 Controller 인터페이스를 구현하는 클래스를 만들어 분리한다.
+- 이렇게 생성한 Controller 구현체를 Map<String, Ccontroller>에 저장한다. Map의 key에 해당하는 String은 요청 URL, value에 해당하는 Controller는 Controller 구현체이다.
+- 클라이언트 요청 URL에 해당하는 Controller를 찾아 service() 메서드를 호출한다.
+- Controller 인터페이스를 구현하는 AbstractController 추상 클래스를 추가해 중복을 제거하고,service() 메서드에서 GET과 POST HTTP 메서드에 따라 doGet(),doPost()메서드를 호출하도록 한다
+
+## 웹 서버 리펙토링 구현 및 설명
+내가 구현했던 코드의 클래스 다이어그램을 살펴보면 RequestHandler의 역할을 다음과 같다
+- 클라이언트 요청에대한 헤더와 본문 데이터 처리(run->urlfunction, param)
+- 클라이언트 요청에 대한 로직 처리(urlfunction)
+- 로직 처리 완료 후 클라이언트에 대한 응답 헤더와 본문 데이터 처리작업(responseXXXheader,responseBody)
+하나의 클래스가 너무 많은 일을 하는데 RequestHandler 클래스가 가지고 있는 책임 중 클라이언트 요청 데이터와 응답 데이터 처리를 별도의 클래스로 분리한다
 
  
