--- a/리펙토링실습.md
+++ b/리펙토링실습.md
@@ -87,28 +87,43 @@ userID=testcode&password=password&name=name
 RequestHandler.java에서 요청 헤더를 읽어들이는 부분을 HttpRequest.java로 뽑아내고 이에대한 테스트 코드를 작성한다.
 - HttpRequestTest.java
 ```
+package util;
+
 import org.junit.Test;
 
+import java.io.File;
+import java.io.FileInputStream;
+import java.io.InputStream;
+
+import static org.junit.Assert.assertEquals;
+
 public class HttpRequestTest{
+    private HttpMethod method;
     private String testDirectory = "./src/test/resources/";
     @Test
     public void requestGet() throws Exception{
         InputStream in = new FileInputStream(new File(testDirectory+"Http_GET.txt"));
         HttpRequest request = new HttpRequest(in);
-        assertEquals("GET",request.getMethod());
-        assertEquals("/user/create".request.getPath());
-        assertEquals("jeep-alive",request.Header("Connection"));
-        assertEquals("testcode",request.getParameter(userId);
+        assertEquals(method.GET,request.getMethod());
+        assertEquals("/user/create",request.getPath());
+        assertEquals("localhost:8080",request.getHeader("Host"));
+        assertEquals("keep-alive",request.getHeader("Connection"));
+        assertEquals("testcode",request.getParameter("userID"));
     }
     @Test
     public void request_POST() throws Exception{
         InputStream in = new FileInputStream(new File(testDirectory+"Http_POST.txt"));
         HttpRequest request = new HttpRequest(in);
-        assertEquals("POST",request.getMethod());
+        assertEquals(method.POST,request.getMethod());
         assertEquals("/user/create",request.getPath());
+        assertEquals("localhost:8080",request.getHeader("Host"));
+        assertEquals("46",request.getHeader("Content-Length"));
+        assertEquals("application/x-www-form-urlencoded",request.getHeader("Content-Type"));
         assertEquals("keep-alive",request.getHeader("Connection"));
-        assertEquals("name",request.getParameter)
+        assertEquals("name",request.getParameter("name"));
     }
+
+
 }
 ```
 
@@ -187,4 +202,156 @@ HttpRequest, HttpResponse 클래스는 아래처럼 설계한다
 - 로직 처리 완료 후 클라이언트에 대한 응답 헤더와 본문 데이터 처리작업(responseXXXheader,responseBody)
 하나의 클래스가 너무 많은 일을 하는데 RequestHandler 클래스가 가지고 있는 책임 중 클라이언트 요청 데이터와 응답 데이터 처리를 별도의 클래스로 분리한다
 
- 
+<br>
+
+### 요청 데이터를 처리하는 로직을 별도의 클래스로 분리한다
+클라이언트 요청 데이터에서 요청 라인을 읽고, 헤더를 읽는 로직을 HttpRequest 클래스를추가해 구현한다<br>
+HttpRequest의 책임은 클라이언트 요청데이터를 읽은 후 각 데이터를 사용하기 좋은 형태로 분리하는 역할만 한다. 이렇게 분리한 데이터를사용하는 부분은 RequestHandler가 가지도록 한다. 즉 , 데이터를 파싱하는 작업과 사용하는 부분을 분리하는 것이다. 이 같은 원칙에 따라 구현한 HttpRequest 코드는 다음과 같다
+- HttpRequest.java(리펙토링)
+```
+package util;
+
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import java.io.BufferedReader;
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.nio.file.Paths;
+import java.util.HashMap;
+import java.util.Map;
+/*
+* 클라이언트 요청 데이터에서 요청 라인을 읽고, 헤더를 읽는 로직을 HttpRequest 클래스를 추가해 구현한다
+* HttpRequest의 역할은 클라이언트 요청 데이터를 읽은 후 각 데이터를 사용하기 좋은 형태로 분리하는 역할만 한다.
+* 이렇게 분리한 데이터를 사용하는 부분은 RequestHandler가 가지도록 한다
+* 즉 데이터를 파싱하는 작업과 사용하는 부분을 분리하는 것이다
+* */
+
+
+public class HttpRequest{
+    private static final Logger log = LoggerFactory.getLogger(HttpRequest.class);
+    private String path;
+    private HttpMethod method;
+    private Map<String,String> headers = new HashMap<String,String>(); //getHeader("필드 이름")을 통해 접근 가능하도록
+    private Map<String,String> params = new HashMap<String,String>(); //getParameter("인자 이름")을 통해 접근 가능하도록
+    public HttpRequest(InputStream in){ //클라이언트 요청 데이터를 담고 있는 InputStream을 생성자로 받음
+        try{
+            BufferedReader br = new BufferedReader(new InputStreamReader(in,"UTF-8"));
+            String line = br.readLine(); // 요청 라인 읽기(헤더 첫줄)
+            if(line == null){
+                return ;
+            }
+            processRequestLine(line); //요청 라인 처리
+
+
+            while(true){
+                line = br.readLine();
+                if(line==null||line.equals("")){//첫번째 조건은 GET인경우 헤더를 다 읽었을 때 두번째 조건은 POST인경우(헤더 body 구분)
+                    break;
+                }
+                log.debug("header : {}",line);
+                String[] tokens = line.split(":");
+                if (tokens.length==2)
+                    headers.put(tokens[0].trim(),tokens[1].trim()); // 헤더, 헤더 내용을 headers에 저장
+                else if(tokens.length==3)
+                {
+                    StringBuilder sb = new StringBuilder();
+                    sb.append(tokens[1]);
+                    sb.append(":");
+                    sb.append(tokens[2]);
+                    headers.put(tokens[0].trim(),sb.toString().trim());
+                }
+            }
+            if(method.isPost()){
+                String body = IOUtils.readData(br,Integer.parseInt(headers.get("Content-Length")));
+                params = HttpRequestUtils.parseQueryString(body);
+            }
+        } catch(IOException e){
+            e.printStackTrace();
+        }
+
+    }
+
+    public void processRequestLine(String requestLine){
+        log.debug("request line : {}",requestLine);
+        String[] tokens = requestLine.split(" ");
+        method = HttpMethod.valueOf(tokens[0]);     //메서드 방식
+        if(method.isPost()){
+            path=tokens[1]; //post인 경우 별 다른 경우 없이 파일 경로
+            return ;
+        }
+        int index = tokens[1].indexOf("?");
+        if(index==-1) { //쿼리스트링이 없으면 파일 경로
+            path = tokens[1];
+        }else{
+            path=tokens[1].substring(0,index);//? 이전 까지가 경로
+            params = HttpRequestUtils.parseQueryString(tokens[1].substring(index+1));//? 이후로는 쿼리스트링이므로
+        }
+    }
+    public HttpMethod getMethod(){
+        return method;
+    }
+    public String getPath(){
+        return path;
+    }
+    public String getHeader(String name){
+        return headers.get(name);
+    }
+    public String getParameter(String name){
+        return params.get(name);
+    }
+}
+
+
+```
+
+HttpRequest는 InputStream을 생성자의 인자로 받은 후 InputStream에 담겨있는 데이터를필요한 형태로 분리한 후 객체의 필드에 저장하는 역할만 한다. 이렇게 저장한 값에 접근할 수 있도록 4가지 종류의 get() 메서드를 제공할 뿐이다. <br>
+
+
+기존의 RequestHandler에서 가장 크게 개선된 부분은 요청헤더를 처리하는 부분이다 기존의 RequestHandler에서는 아래와 같이 while문을 돌면서 해당 라인이 헤더 값을 얻기 위해 특정 문자열을 포함 하는지 확인했었다. 만약 요청 헤더로부터 얻어야하는 값의 경우의 수가 많아지면(쿠키, 컨텐츠 길이) 당연히 코드가 길어질 수 밖에 없다.<br>
+하지만 리펙토링한 코드에서는 경우의 수가 많아지더라도 헤더정보를 map에 저장해놓았기 때문에 getHeader() 메서드로 간단하게 얻어올 수 있다.
+
+- 리펙토링 전 헤더처리 부분
+```
+while(!line.equals("")){
+                    line=br.readLine();
+                    if(line.contains("Content-Length")){
+                        contentLength = getContentLength(line);
+                    }
+                }
+while(!line.equals("")){
+                    line=br.readLine();
+                    if(line.contains("Cookie")){
+                        cookie=Boolean.parseBoolean(HttpRequestUtils.parseCookies(line.split(":")[1]).get("logined"));
+                        log.debug("{} \n{} Cookie:{}",line,HttpRequestUtils.parseCookies(line.split(":")[1]).get("logined"),cookie);
+                    }
+                }
+```
+- 리펙토링 후 헤더처리 부분
+```
+HttpRequest request = new HttpRequest(in);
+request.getHeader("Connection")
+```
+<br>
+- 리펙토링 부분 테스트 결과
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/1d6e8457-6d85-4baa-8834-c7caba0d8ee7)
+
+위의 리펙토링으로는 processRequestLine에 대한  직접적인 테스트를 진행하기 어려워 클래스로 분리해볼까 고민을 많이 해봤는데 하지 않는 것으로 결정했다
+클래스를 분리해서 테스트 코드를 추가로 작성해도 이미 HttpRequestTest에서 테스트한 getHeader를 똑같이 구현해 테스트를 진행하게될 것 같았기 때문이다
+
+<br>
+
+리펙토링하기 전 코드에서는 GET,POST 문자열이 하드코딩 되어 있는 부분이 많은데 이와 같이 상수값이 서로 연관관계가 있는 경우(동서남북 등) enum을 사용해볼 수 있다
+GET,POST를 HttpMethod라는 이름의 enum안에 상수로 선언해주었다
+- HttpMethod.java
+```
+public enum HttpMethod{
+ GET,
+ POST;
+ public boolean isPopst(){
+ return this==post;
+}
+}
+```
+<br>
