Update 1.요청 처리 리펙토링 후 발생한 문제.md

--- a/troubleshooting/1.요청 처리 리펙토링 후 발생한 문제.md
+++ b/troubleshooting/1.요청 처리 리펙토링 후 발생한 문제.md
@@ -48,9 +48,34 @@ HTTP 통신의 비연결성은 클라이언트가 서버에 요청을 하고 그
 구현된 웹 서버는 요청메시지가 오면 스레드가 그에 대한 처리를하고 응답을 하는 서버이다.
 따라서 RequestHander가 리다이렉트 전 로그인 요청에 대해 요청에 맞는 처리와 응답을 하고 브라우저 리다이렉트 후에 새로운 요청에 대해서 스레드가 새롭게 실행되는 것이다
 따라서 static으로 선언되어있던 user클래스의 멤버들과 달리 RequestHandler나 HttpRequest 안에 있던 인스턴스 멤버들을 새롭게 초기화가 되며 요청 메시지는 그 당시의 요청 메시지의 헤더정보와 파라미터를 저장하는 것이다
+
+
 (그러니 위 사진의 오류는 GET 요청 정보가 저장된 Map에서 POST 헤더에 대한 정보를 꺼내오려고 한 것과도 같다)
 
 따라서 리펙토링한 코드가 리펙토링 전과 같이 작동하기 위해서는 78번째 라인을 삭제하는 것이 맞다(애초에 Content-Length가 필요 없는 상황이니 그냥 에러만 일으키는 부분)
 
-
-
+## 문제상황 2 - 유저 목록 출력 문제
+이부분은 리펙토링 이전에 RequestHandler에서 쿠키헤더를 처리하는 부분을 주석처리 하면서 생긴 문제로 Map에 저장된 Cookie 헤더 값을 파싱해서 할당해주는 것을 구현해주었다
+- 주석처리 부분과 새로 구현한 부분
+```
+if (Files.exists( Paths.get("./webapp"+requestPath))){ //요청한 웹페이지에 해당하는 파일이 있다면
+                byte[] body = Files.readAllBytes(new File("./webapp"+requestPath).toPath());
+                if(hr.getHeader("Cookie")!=null) {
+                    String[] temp = hr.getHeader("Cookie").split("=");
+                    String[] temp2 = temp[1].split(" ");
+                    log.debug("coookieheadercheck{}",temp2[0]);
+                    cookie = Boolean.parseBoolean(temp2[0]);
+                }
+                /*
+                while(!line.equals("")){
+                    line=br.readLine();
+                    if(line.contains("Cookie")){
+                        cookie=Boolean.parseBoolean(HttpRequestUtils.parseCookies(line.split(":")[1]).get("logined"));
+                        log.debug("{} \n{} Cookie:{}",line,HttpRequestUtils.parseCookies(line.split(":")[1]).get("logined"),cookie);
+                    }
+                }*/
+                //
+                urlFunction(requestPath,dos,hr,body,cookie);    //웹 url에 따라 다른 기능을 수행하기 위함
+            }
+```
+![image](https://github.com/kdfasdf/javawebserver/assets/96770726/332ca603-2123-46fd-a8c8-6660aa2440a0)
