--- a/리펙토링 응답처리.md
+++ b/리펙토링 응답처리.md
@@ -356,7 +356,9 @@ public class RequestHandler extends Thread{
 ```
 
 ## 후기
-Http 요청 헤더와 응답 헤더 처리에 대한 리펙토링을 끝냈다. 테스트 코드와 클래스를 분리해서 구현하는 것은 나보다 잘하시는 분의 코드를 참고했는데도 RequestHandler의 로직이 살짝 달라서 어려움이 있었던 것 같다. 
+Http 요청 헤더와 응답 헤더 처리에 대한 리펙토링을 끝냈다. 테스트 코드와 클래스를 분리해서 구현하는 것은 저자 코드를 참고하였는데 '이부분은 그냥 아 이렇게 기능을 분리할 수 있구나' 경험해보는게 더 중요하다고 생각했기 때문이다. 코드 개선의 대상인 RequestHandler.java의 로직은 저자와 살짝 달라서 내 코드에 직접 적용해보면서 진행하였다. 
 처음이라 아직은 찍먹 수준이겠지만 리펙토링에 대하여 느낀점이 있다면 리펙토링으로 코드를 효과적으로 개선하기 위해서는 많은 코드 구현 경험이 필요한 것 같다. (이건 센스도 중요한 것 같다). 그리고 테스트 코드 없이
-리펙토링 한다는 것은 굉장히 어렵고 위험한 일이라는 생각이 들었다. 테스트 코드를 통해 내가 구현한 코드를 검증하고 그 이후에 리펙토링하는 것도 난이도가 상당하고 조심스러웠다. 
+리펙토링 한다는 것은 굉장히 어렵고 위험한 일이라는 생각이 들었다. 테스트 코드를 통해 내가 구현한 코드를 검증했는데도 불구하고 리펙토링 대상에 해당하는 부분을 대체하는 것은 난이도가 상당하고 조심스러웠다. 
+<br>
+큰 차이는 없겠다만 리펙토링 이전에 비해서 웹 서버의 성능이 향상된 부분이 있지 않을까 생각한다. 아직 한참 멀었지만 언젠가는 프로메테우스 같은 툴을 이용해서 웹 성능을 측정해보아도 재밌을 것 같다는 생각이 든다.
 
