--- a/리펙토링(컨트롤러).md
+++ b/리펙토링(컨트롤러).md
@@ -142,6 +142,45 @@ public class RequestHandler extends Thread{
     }
 }
 ```
+
+여기에 Http메서드에 따라 다른 처리를 할 수 있도록 추상 클래스를 추가할 수 있다
+- AbstractController.java
+```
+public class AbstractController implements Controller{
+    @Override
+    public void service(HttpRequest request, HttpResponse response){
+        HttpMethod method = request.getMethod();
+        if(method.isPost())
+        {
+            doPost(request,response);
+        }else{
+            doGet(request,response);
+        }
+    }
+    protected void doPost(HttpRequest request, HttpResponse response){}
+    protected void doGet(HttpRequest request, HttpResponse response){}
+}
+```
+
+이후 각 기능의 Controller들도 AbstractController를 상속해 Http메서드에 맞는 메서드를 오버라이드하도록 할 수 있다
+
+```
+public class CreateUserController extends AbstractController{
+    @Override
+    public void doPost(HttpRequest request, HttpResponse response){
+    ...
+    }
+}
+```
+```
+public class ListUserController extends AbstractController{
+    @Override
+    public void doGet(HttpRequest request, HttpResponse response){
+    ...
+    }
+}
+```
+
 ## 후기 
 이전 Http메시지에 대한 리펙토링을 진행했을 떄에 비해서 상상할 수 없을 만큼 RequestHandler 클래스의 run의 로직이 간단해졌다. 새로운 기능을 추가 하더라도 run()을 수정할 필요가 없고 Controller 인터페이스의 새로운 구현체를 
 만들어주면 된다. 리펙토링의 결과물이 경이롭다는 생각이 든다. controller 리펙토링 코드와 http메시지 리펙토링을 여러번 비교해보면서 복기해야겠다
