--- a/리펙토링(컨트롤러).md
+++ b/리펙토링(컨트롤러).md
@@ -181,6 +181,14 @@ public class ListUserController extends AbstractController{
 }
 ```
 
+- Http 웹 서버의 문제점
+지금까지 웹 서버를 직접 구현하고 리펙토링하는 과정에 대해 살펴봤다. 웹 서버를 직접 구현해봄으로써 HTTP 요청과 응답의 세부 내용에 대해 더 깊이 학습할 수 있느 ㄴ계기가 되었다. 하지만 지금까지 구현한 웹 서버는 여러 한계를 가지는데 가장 큰 3가지를 꼽자면
+
+- HTTP 요청과 응답 헤더, 본문 처리와 같은데 시간을 투자함으로써 정작 중요한 로직을 구현하는데 투자할 시간이 상대적으로 적다
+- 동적인 HTML을 지원하는데 한계가 있다. 동적으로 HTML을 생성할 수 있지만 많은 코딩량을 필요로 한다
+- 사용자가 입력한 데이터가 서버를 재시작하면 사라진다 사용자가 입력한 데이터를 유지하고 싶다
+
+
 ## 후기 
 이전 Http메시지에 대한 리펙토링을 진행했을 떄에 비해서 상상할 수 없을 만큼 RequestHandler 클래스의 run의 로직이 간단해졌다. 새로운 기능을 추가 하더라도 run()을 수정할 필요가 없고 Controller 인터페이스의 새로운 구현체를 
 만들어주면 된다. 리펙토링의 결과물이 경이롭다는 생각이 든다. controller 리펙토링 코드와 http메시지 리펙토링을 여러번 비교해보면서 복기해야겠다
