--- a/요구사항1-1~1-4정리노트1.md
+++ b/요구사항1-1~1-4정리노트1.md
@@ -13,7 +13,7 @@
   - 리다이렉트 vs 포워딩
   - HTTP 302 리다이렉트 헤더 
 
-## 요구사항 1-1 - http://localhost:8080/index.html로 접속시 응답 요구사항 1-4 302 status code 적용
+## 요구사항 1-1 - http://localhost:8080/index.html로 접속시 응답 
 
 웹에서 클라이언트가 주소창에 특정 도메인이나 IP를 입력하면  특정 도메인에 대응되는 IP주소를 찾아
 특정 서버와 브라우저를 연결한다.
@@ -183,10 +183,8 @@ public class HttpRequestUtils {
 
 ```
 
-※ Util 클래스란?
-여러 클래스에서 공통적으로 사용되는 메서드를 모아서 클래스로 만드는 것
 
-## 요구사항 1-2  GET 방식으로 회원가입 하기 단 db 연동을 안하므로 응답은 302 status code
+## 요구사항 1-2,1-4  GET 방식으로 회원가입 하기 회원 가입 후 index.html로 리다이렉트
 - http://localhost:8080/user/form.html에서 회원가입을 한다. 회원가입 폼에 넣은 사용자 정보는 model.User클래스에 저장한다
 - 회원 가입을 완료하면 /user/create로 넘어가게 된다. 하지만 /user/create/에 대해서는 응답으로 전달할 파일이 없기 때문에 /index.html 페이지로 이동한다.
 
@@ -549,6 +547,8 @@ dos.writeBytes("Http/1.1 302 found \r\n");
 /index.html로 페이지 이동이 되면서
 
 그에따른 응답 헤더도
+
 ![image](https://github.com/kdfasdf/javawebserver/assets/96770726/fbce80b6-c6f1-4765-adb1-12d2871953fe)
+
 
 의도한대로 잘 도착한 것을 알 수 있다
