--- a/세션 요구사항 및 실습.md
+++ b/세션 요구사항 및 실습.md
@@ -134,9 +134,12 @@ HttpSession getSession(){
 }
 ```
 사실 이 부분을 작성할 때 굉장히 고민이 많았던게 서블릿에서 제공하는 세션과 비슷하게 구현하려면 세션 저장소 역할을 하는 HttpSessions클래스에 JESSIONID에 해당하는 value 값을 HttpSession
-클래스를 식별하기 위한 값으로 써야하지 않나 생각했다. 하지만 이 HTTP 웹 서버는 클라이언트 요청을 스레드가 처리하기 시작하면서 구동되므로 클라이언트 A와 클라이언트 B에 대해 다른 스레드가 요청처리를 하고 응답하는
-근본적인 차이가 있다. 따라서 HttpSessions 클래스 부터 그와 관련된 다른 세션 쿠키 클래스도 하나의 계정에 대해서 동작을 처리하기 때문에 JESSIONID를 key 값으로 사용했다.
+클래스를 식별하기 위한 값으로 써야하지 않나 생각했다. 하지만 이 HTTP 웹 서버는 서블릿에서의 ServletContext와 같은 공용 공간이 없고 클라이언트 요청을 스레드가 처리하기 시작하면서 구동되므로
+클라이언트 A와 클라이언트 B에 대해 다른 스레드가 요청처리를 하고 응답한다.
+따라서 HttpSessions 클래스와 관련된 다른 세션 쿠키 클래스도 하나의 계정에 대해서 동작을 처리하기 때문에 JESSIONID를 key 값으로 사용했다.
+
 <br>
+
 쿠키 클래스에는 헤더에 쿠키 라인을 파싱해 key value 형식으로 저장한다
 - HttpCookie
 ```
